--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^3.10.0",
     "vue": "^2.6.12",
+    "swagger-ui": "^3.46.0",
+    "vue-codemirror": "^4.0.6",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
