--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.10.0",
-    "vue": "^2.6.12",
     "swagger-ui": "^3.46.0",
+    "vue": "^2.6.12",
     "vue-codemirror": "^4.0.6",
     "vue-router": "^3.5.1"
   },
