--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
+    "start": "NODE_ENV=production node server.js",
+    "heroku-postbuild": "npm run build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
