--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "compression": "^1.7.4",
     "core-js": "^3.10.0",
+    "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "swagger-ui": "^3.46.0",
     "vue": "^2.6.12",
     "vue-codemirror": "^4.0.6",
