--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "swagger-ui": "^3.46.0",
     "vue": "^2.6.12",
     "vue-codemirror": "^4.0.6",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
