--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "ci": "start-server-and-test 'npm run serve' 8080 'npm run cy:run'",
+    "test": "start-server-and-test 'npm run serve' 8080 'npm run cy:run'",
     "start": "NODE_ENV=production node server.js",
     "heroku-postbuild": "npm run build",
     "lint": "vue-cli-service lint"
