--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
+    "test": "start-server-and-test 'npm run serve' 8080 'npm run cy:run'",
     "start": "NODE_ENV=production node server.js",
     "heroku-postbuild": "npm run build",
     "lint": "vue-cli-service lint"
@@ -34,6 +35,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-vue": "^6.2.2",
+    "start-server-and-test": "^1.14.0",
     "vue-template-compiler": "^2.6.12"
   }
 }
