--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "swagger-ui": "^3.46.0",
     "vue": "^2.6.12",
     "vue-codemirror": "^4.0.6",
+    "vue-multiselect": "^2.1.6",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.5.1"
   },
